-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: client-libs
-
b24
-
generic
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225946 | 14 | Sergey Bylokhov | P4 | Resolved | Fixed | team |
The bug is reported here:
https://mail.openjdk.java.net/pipermail/awt-dev/2019-May/015182.html
============
I’ve been trying to get the JDK to compile with the new /permissive- switch in VS2017 (https://devblogs.microsoft.com/cppblog/permissive-switch/) however there have been a few issues in various parts of the code.
While testing this, I found some issues in the AWT code. In one case we name a function with the class:: prefix when the function is declared inline in the class definition. Other cases include where we are assigning string literals to non-const char* variables
https://mail.openjdk.java.net/pipermail/awt-dev/2019-May/015182.html
============
I’ve been trying to get the JDK to compile with the new /permissive- switch in VS2017 (https://devblogs.microsoft.com/cppblog/permissive-switch/) however there have been a few issues in various parts of the code.
While testing this, I found some issues in the AWT code. In one case we name a function with the class:: prefix when the function is declared inline in the class definition. Other cases include where we are assigning string literals to non-const char* variables
- backported by
-
JDK-8225946 Fix some C++ conformance issues in AWT Windows code
-
- Resolved
-
- links to