8225032: Fix some C++ conformance issues in AWT Windows code

Reviewed-by: prr, serb